# gooseboy-rs

./: Cargo.toml  Makefile.toml  README.md  build.rs  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: build.yml
buildscript/: Cargo.toml
buildscript/src/: lib.rs
doom/: Cargo.toml  build.rs  puredoom_wrapper.c
doom/src/: lib.rs
example/: Cargo.toml  Makefile.toml
example/src/: lib.rs
example2/: Cargo.toml
example2/src/: lib.rs
examples/async/: Cargo.toml  crate.json
examples/async/src/: executor.rs  lib.rs  task.rs
examples/axolotl/: Cargo.toml  crate.json
examples/axolotl/src/: lib.rs  renderer.rs  transformer.rs
examples/badapple/: Cargo.toml  crate.json
examples/badapple/src/: lib.rs
examples/bsprenderer/: Cargo.toml  build.rs  crate.json
examples/bsprenderer/src/: lib.rs
examples/chip8/: Cargo.toml  crate.json
examples/chip8/src/: cpu.rs  lib.rs  misc.rs
examples/doom/: Cargo.toml  crate.json
examples/doom/src/: lib.rs
examples/fnaf/: .gitignore  Cargo.toml  build.rs
examples/fnaf/src/: animated_sprite.rs  lib.rs
examples/generic/: Cargo.toml  build.rs  crate.json
examples/generic/src/: lib.rs
examples/goosegpu/: Cargo.toml  crate.json
examples/goosegpu/src/: lib.rs
examples/physics/: Cargo.toml  crate.json
examples/physics/src/: lib.rs
examples/riscv/: Cargo.toml  crate.json
examples/riscv/rv64emu-rs/: Cargo.toml  README.md
examples/riscv/rv64emu-rs/examples/: debug_system.rs  linux_system.rs  ysyx_am_system.rs
examples/riscv/rv64emu-rs/src/: config.rs  lib.rs  rvsim.rs  tools.rs
examples/riscv/rv64emu-rs/src/dbg/: debug_module.rs  debug_module_register.rs  jtag_driver.rs  jtag_state.rs  remote_bitbang.rs
examples/riscv/rv64emu-rs/src/device/: device_16550a.rs  device_am_rtc.rs  device_am_uart.rs  device_memory.rs  device_sifive_clint.rs  device_sifive_plic.rs  device_sifive_uart.rs  device_trait.rs
examples/riscv/rv64emu-rs/src/difftest/: difftest_trait.rs
examples/riscv/rv64emu-rs/src/rv64core/: bus.rs  cpu_core.rs  csr_regs.rs  csr_regs_define.rs  gpr.rs  inst_decode.rs  traptype.rs
examples/riscv/rv64emu-rs/src/rv64core/cache/: cache_system.rs  cpu_dcache.rs  cpu_icache.rs
examples/riscv/rv64emu-rs/src/rv64core/inst/: inst_base.rs  inst_rv64a.rs  inst_rv64c.rs  inst_rv64i.rs  inst_rv64m.rs  inst_rv64z.rs
examples/riscv/rv64emu-rs/src/rv64core/mmu/: cpu_mmu.rs  vm_info.rs
examples/riscv/rv64emu-rs/tests/: riscv-tests.rs
examples/riscv/src/: ansi.rs  lib.rs
examples/tests/: Cargo.toml  crate.json
examples/tests/src/: lib.rs  ui.rs
examples/tests/src/tests/: framebuffer.rs  mem.rs  mod.rs  sprite.rs  storage.rs  text.rs  timer.rs
gooseboy/: Cargo.toml
gooseboy/src/: audio.rs  bindings.rs  camera.rs  color.rs  error.rs  font.rs  framebuffer.rs  game.rs  gpu.rs  input.rs  keys.rs  lib.rs  mem.rs  panic.rs  rand.rs  runtime.rs  sprite.rs  storage.rs  system.rs  text.rs  timer.rs  unsafe_casts.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: audio.rs  bindings.rs  color.rs  framebuffer.rs  input.rs  lib.rs  mem.rs  runtime.rs  storage.rs  timer.rs
tests/: Cargo.toml  crate.json
tests/src/: lib.rs  state.rs  suite.rs  ui.rs
tests/src/tests/: color.rs  framebuffer.rs  mem.rs  sprite.rs  storage.rs
xtask/: Cargo.toml
xtask/src/: main.rs
