[workspace]
members = [
    "gooseboy",
    "macros",
    "xtask",
    "tests",
    "buildscript",
    "examples/generic",
    "examples/badapple",
    "examples/chip8",
    "examples/doom",
    "examples/axolotl",
    "examples/physics",
    "examples/goosegpu", "examples/bsprenderer", "examples/riscv",
]
resolver = "3"
