[workspace]
members = [
    "gooseboy",
    "macros",
    "xtask",
    "tests",
    "buildscript",
    "examples/generic",
    "examples/badapple",
    "examples/chip8",
    "examples/doom",
    "examples/axolotl",
    "examples/physics",
    "examples/goosegpu",
    "examples/bsprenderer",
    "examples/riscv",
]
resolver = "3"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }

used_underscore_binding = "allow"
