[package]
name = "gooseboy"
version = "0.3.0"
edition = "2024"
authors = ["awildergoose"]
description = "The Minecraft Gooseboy mod's standard library."
license-file = "LICENSE"
repository = "https://github.com/awildergoose/gooseboy-rs.git"
keywords = ["minecraft", "wasm"]
categories = ["game-development", "os", "rendering", "wasm"]

[lib]
crate-type = ["rlib"]

[dependencies]
gooseboy_macros = { path = "../macros", version = "0.3" }
thiserror = "2.0.18"
vek = { version = "0.17.2", default-features = false, features = ["std"], optional = true }

[features]
audio = []
gpu = ["dep:vek"]
framebuffer = ["dep:vek"]
storage = []
input = []
rand = []
library = []
default = ["audio", "gpu", "framebuffer", "storage", "input", "rand"]

[lints]
workspace = true
