[package]
name = "gooseboy_macros"
version = "0.3.0"
edition = "2024"
authors = ["awildergoose"]
description = "The Minecraft Gooseboy mod's macros."
license-file = "../LICENSE"
repository = "https://github.com/awildergoose/gooseboy-rs.git"
keywords = ["minecraft", "wasm", "macro", "proc-macro"]
categories = ["game-development", "os", "wasm"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "^1"
quote = "^1"
syn = { version = "^2", features = ["full"] }
