[package]
name = "fnaf"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
gooseboy = { path = "../../gooseboy" }
axolotl = { path = "../axolotl" }
libfnaf = { git = "https://github.com/awildergoose/libfnaf.git" }

[build-dependencies]
gooseboy_buildscript = { path = "../../buildscript" }
